--- a/snippets/font-icon.liquid
+++ b/snippets/font-icon.liquid
@@ -298,4 +298,10 @@
   .icon-youtube1:before {
     content: "\e954";
   }
+  .icon-tag:before {
+    content: "\e957";
+  }
+  .icon-price-tag:before {
+    content: "\e958";
+  }
 </style>
