--- a/snippets/header-css.liquid
+++ b/snippets/header-css.liquid
@@ -150,6 +150,8 @@ article,aside,figcaption,figure,footer,header,hgroup,main,nav,section{display:bl
       --g-main: {{settings.color_primary}};
       --g-main-2: {{settings.color_secondary}};
       --g-color-heading: {{settings.color_body_headings}};
+      --g-color-compare: {{settings.color_compare_price}};
+      --g-color-discount: {{settings.color_compare_discount}};
       --g-cta-button: {{settings.color_cta}};
       --g-container: {{settings.container}}px;
       --g-gutter: {{settings.gutter }}px;
