--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -2991,16 +2991,32 @@ figcaption .bg-des:before {
 @media only screen and (min-width: 750px) {
 	.main-content {
 		padding-bottom: 80px;
-		padding-top: 80px;
 	}
 }
 
 @media only screen and (max-width: 749px) {
 	.main-content {
 		padding-bottom: 40px;
-		padding-top: 40px;
 	}
 }
+
+@media (max-width: 990px) {
+	.js-collection-title {
+		text-align: center;
+	}
+}
+
+/* Hide the form by default */
+.drawer__search--collection {
+	display: none;
+  }
+  
+  /* Show the form when the screen is less than or equal to 990px */
+  @media (max-width: 990px) {
+	.drawer__search--collection {
+	  display: block;
+	}
+  }
 
 .template-index .main-content {
 	padding-top: 0;
@@ -3792,7 +3808,7 @@ input.input--error::-ms-input-placeholder, textarea.input--error::-ms-input-plac
 }
 
 input, textarea {
-	padding: 13px 15px;
+	padding: 13px 20px;
 }
 
 select {
@@ -4802,7 +4818,13 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 }
 
 .product-single__price--compare {
-	color: var(--g-color-heading);
+	color: var(--g-color-compare);
+	font-size: 15px;
+}
+
+.product-single__price--discount {
+	color: var(--g-color-discount);
+	font-size: 15px;
 }
 
 .product-single__stock {
@@ -6437,7 +6459,7 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 
 .js-qty__input {
 	width: 100%;
-	padding-left: 0;
+	padding-left: 5px;
 }
 
 .js-qty__adjust {
