--- a/sections/product-template-1.liquid
+++ b/sections/product-template-1.liquid
@@ -183,7 +183,7 @@
   }
 }
 /* Default: show on screens smaller than or equal to 767px */
-.mobile-only {
+.mobile-only, .not-moble {
   display: block;
 }
 
@@ -193,9 +193,264 @@
     display: none;
   }
 }
+/* Show on screens 768px and larger */
+@media (min-width: 768px) {
+  .non-mobile {
+    display: block;
+  }
+}
+
+/* Hide on screens smaller than 768px */
+@media (max-width: 767px) {
+  .non-mobile {
+    display: none;
+  }
+}
+
+.not-mobile {
+}
+
+.bundle-container, .info-container{
+  min-width: 440px; 
+  max-width: 600px;
+  background: white;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  gap: 10px;
+}
+.bundle-item {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border: 1px solid rgb(246, 59, 59);
+  border-radius: 5px; 
+  margin-bottom: 10px; 
+}
+.bundle-plus {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px; 
+}
+
+.bundle-plus i {
+  font-weight: bold; /* Optional: adjust weight */
+  
+}
+.bundle-item img {
+  width: 75px;
+  height: 75px;
+}
+.original {
+  text-decoration: line-through;
+  color: #999;
+}
+.total-container {
+  text-align: right;
+  margin-top: 20px;
+}
+.add-bundle {
+  background:rgb(246, 59, 59);
+  color: white;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  width: 100%;
+}
+
+.discounted-total{
+  color: rgb(246, 59, 59);
+}
+
+  @supports (-webkit-appearance: none) or (-moz-appearance: none) {
+    .checkbox-wrapper-14 input[type=checkbox] {
+      --active:rgb(254, 39, 39);
+      --active-inner: #fff;
+      --focus: 2px rgba(254, 39, 39, 0.3);
+      --border:rgb(225, 187, 187);
+      --border-hover:rgb(254, 39, 39);
+      --background: #fff;
+      --disabled: #F6F8FF;
+      --disabled-inner: #E1E6F9;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      height: 21px;
+      outline: none;
+      display: inline-block;
+      vertical-align: top;
+      position: relative;
+      margin: 0;
+      cursor: pointer;
+      border: 1px solid var(--bc, var(--border));
+      background: var(--b, var(--background));
+      transition: background 0.3s, border-color 0.3s, box-shadow 0.2s;
+    }
+    .checkbox-wrapper-14 input[type=checkbox]:after {
+      content: "";
+      display: block;
+      left: 0;
+      top: 0;
+      position: absolute;
+      transition: transform var(--d-t, 0.3s) var(--d-t-e, ease), opacity var(--d-o, 0.2s);
+    }
+    .checkbox-wrapper-14 input[type=checkbox]:checked {
+      --b: var(--active);
+      --bc: var(--active);
+      --d-o: .3s;
+      --d-t: .6s;
+      --d-t-e: cubic-bezier(.2, .85, .32, 1.2);
+    }
+    .checkbox-wrapper-14 input[type=checkbox]:disabled {
+      --b: var(--disabled);
+      cursor: not-allowed;
+      opacity: 0.9;
+    }
+    .checkbox-wrapper-14 input[type=checkbox]:disabled:checked {
+      --b: var(--disabled-inner);
+      --bc: var(--border);
+    }
+    .checkbox-wrapper-14 input[type=checkbox]:disabled + label {
+      cursor: not-allowed;
+    }
+    .checkbox-wrapper-14 input[type=checkbox]:hover:not(:checked):not(:disabled) {
+      --bc: var(--border-hover);
+    }
+    .checkbox-wrapper-14 input[type=checkbox]:focus {
+      box-shadow: 0 0 0 var(--focus);
+    }
+    .checkbox-wrapper-14 input[type=checkbox]:not(.switch) {
+      width: 21px;
+    }
+    .checkbox-wrapper-14 input[type=checkbox]:not(.switch):after {
+      opacity: var(--o, 0);
+    }
+    .checkbox-wrapper-14 input[type=checkbox]:not(.switch):checked {
+      --o: 1;
+    }
+    .checkbox-wrapper-14 input[type=checkbox] + label {
+      display: inline-block;
+      vertical-align: middle;
+      cursor: pointer;
+      margin-left: 4px;
+    }
+
+    .checkbox-wrapper-14 input[type=checkbox]:not(.switch) {
+      border-radius: 7px;
+    }
+    .checkbox-wrapper-14 input[type=checkbox]:not(.switch):after {
+      width: 5px;
+      height: 9px;
+      border: 2px solid var(--active-inner);
+      border-top: 0;
+      border-left: 0;
+      left: 7px;
+      top: 4px;
+      transform: rotate(var(--r, 20deg));
+    }
+    .checkbox-wrapper-14 input[type=checkbox]:not(.switch):checked {
+      --r: 43deg;
+    }
+    .checkbox-wrapper-14 input[type=checkbox].switch {
+      width: 38px;
+      border-radius: 11px;
+    }
+    .checkbox-wrapper-14 input[type=checkbox].switch:after {
+      left: 2px;
+      top: 2px;
+      border-radius: 50%;
+      width: 17px;
+      height: 17px;
+      background: var(--ab, var(--border));
+      transform: translateX(var(--x, 0));
+    }
+    .checkbox-wrapper-14 input[type=checkbox].switch:checked {
+      --ab: var(--active-inner);
+      --x: 17px;
+    }
+    .checkbox-wrapper-14 input[type=checkbox].switch:disabled:not(:checked):after {
+      opacity: 0.6;
+    }
+  }
+
+  .checkbox-wrapper-14 * {
+    box-sizing: inherit;
+  }
+  .checkbox-wrapper-14 *:before,
+  .checkbox-wrapper-14 *:after {
+    box-sizing: inherit;
+  }
+  .switch {
+    padding-right: 10px;
+    
+  }
+
+  .bundle-image, .bundle-check {
+    display: flex;
+    justify-content: center; /* Centers items horizontally */
+    align-items: center;     /* Centers items vertically */
+  }
+
+  .bundle-image {
+    min-width: 75px; 
+  }
+
+  .item-details {
+    flex: 1;
+    padding-left: 10px;
+  }
+
+  .bundle-check i, .switch {
+    min-width: 40px;
+    text-align: center;
+    display: inline-block; /* Ensures width applies */
+  }
+
+  .bundle-check i.icon-check-circle {
+    font-size: 25px;      /* Change the size of the icon */
+    color: green;         /* Change the color to green */
+    height: 60%;                   /* Adjust height to fit the icon */
+    width: 60%;
+    font-weight: bold;
+  }
+
+  .bundle-check {
+    display: flex;                  /* Use flexbox to center items */
+    justify-content: center;        /* Center horizontally */
+    align-items: center;            /* Center vertically */
+    height: 50%;                   /* Adjust height to fit the icon */
+    min-width: 25px;
+  }
+
+  .bundle-sec-title {
+    font-weight: 800;
+    font-size: 1.2rem;
+  }
+  #total-price-bundle {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .bundle-total {
+    margin-top: 20px;
+    padding: 15px 0px 0px;
+    border-top: 1px solid #e9e9e9;
+    text-align: left;
+    color: #000;
+    font-size: 16px;
+    font-weight: 750;
+  }
+  .wish-icon {
+    padding-right: 5px; 
+  }
+  .whishlist-container {
+    display: flex; 
+    flex-direction: row;
+  }
 </style>
+{% assign product_image_size = '480x480' %}
 <div class="container js-recently-view" itemscope itemtype="http://schema.org/Product" id="ProductSection-{{ section.id }}" data-section-id="{{ section.id }}" data-section-type="product" data-enable-history-state="true" data-ajax="true" data-stock="{{ section.settings.stock_enable }}" data-handle="{{product.handle}}">
-  {% assign product_image_size = '480x480' %}
   {% assign current_variant = product.selected_or_first_available_variant %}
   <meta itemprop="name" content="{{ product.title }}">
   <meta itemprop="url" content="{{ shop.url }}{{ product.url }}">
@@ -372,6 +627,91 @@
                 {% endif %}
               {% endfor %}
             </div>
+            {% assign bundle_options_count = product.metafields.custom.bundle_options.value.count %}
+            {% if bundle_options_count > 0 %}
+            <div class="bundle-sec-title">Bundle-Up & Save More!</div> 
+            <div>Complete your AirLess.</div>
+            <div class="bundle-container" data-bundle-options-count="{{ bundle_options_count }}">
+              
+              <div class="bundle-item selected">
+                <div class="bundle-check">
+                  {% render 'icon-check-circle' %}
+                </div>
+                {{ product | image_url: width: 75 | image_tag: id: "bundled_product", class: "bundle-image"}}
+                <div class="item-details">
+                    <h5>{{ product.title }}</h5>
+                    <p class="price">
+                      {%- unless product.compare_at_price_max > product.price -%}
+                        <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span>
+                      {%- endunless -%}
+                      <span id="ProductPrice-{{ section.id }}" class="discounted" itemprop="price" content="{{ current_variant.price | divided_by: 100.00 }}">
+                        {{ current_variant.price | money }}
+                      </span>
+                      {% comment %} <span class="discounted">$205.51</span> 
+                      <span class="original" id="BunProductPrice-{{ section.id }}">{{ current_variant.price | money }}</span> {% endcomment %}
+                    </p>
+                </div>
+              </div>
+              <div class="bundle-plus">{% render "icon-plus" %}</div>
+              {% capture "form_id" %}AddBundelToCartForm-{{ section.id }}{%- endcapture %}
+              <form method="post" action="/cart/add" id={{form_id}} accept-charset="UTF-8" enctype="multipart/form-data" class="product-form   product-form--payment-button js-add-bundle">
+                {% assign total_price = current_variant.price %}
+                {% assign discounted_total = current_variant.price %}
+                {% for obj in  product.metafields.custom.bundle_options.value %}
+                  <div class="bundle-item">
+                    {% assign curr_var = obj.product.value.selected_or_first_available_variant %}
+                    <div class="checkbox-wrapper-14 bundle-check">
+                      <input id="bundle_{{ obj.product.value.id }}" type="checkbox" class="switch" {% if curr_var.available %}checked{% else %}disabled{% endif %}>
+                    </div> 
+                    {{ curr_var | image_url: width: 75 | image_tag: class: "bundle-image" }}
+                    <div class="item-details">
+                      <h5>{{ obj.product.value.title }}</h5>
+                      {% assign total_price = total_price | plus: curr_var.price %}
+                      {% assign discount_factor = 100 | minus: obj.discount_2 | divided_by: 100.0 %}
+                      {% assign discount_price = curr_var.price | times: discount_factor %}
+                      {% assign discounted_total = discounted_total | plus: discount_price %}
+                      <p class="price" data-price="{{ curr_var.price}}" data-val1="{{obj.discount_1}}" data-val2="{{obj.discount_2}}"><span class="discounted">{{ curr_var.price | times: discount_factor | money }}</span> <span id="original" class="original">{{ curr_var.price | money }}</span></p>
+                    </div>
+                    <select name="id">
+                      {% for variant in obj.product.value.variants %}
+                      <option {% if variant == current_variant %} selected="selected" {% endif %} data-bundle-product="{{ obj.product.value.id }}" data-sku="{{ variant.sku }}" value="{{ variant.id }}" {% unless variant.available %} disabled="disabled" {% endunless %}>
+                        {% if variant.available %}
+                        {{ variant.title }} 
+                        {% else %}
+                        {{ variant.title }} - {{ 'products.product.sold_out' | t }}
+                        {% endif %}
+                      </option>
+                      {% endfor %}
+                    </select>
+                    <input type="hidden" id="Quantity" name="quantity" value="1">
+                    {% unless product == empty %}
+                      <script type="application/json" id="BundleProductJson-{{ obj.product.value.id }}">
+                          {{ obj.product.value | json }}
+                      </script>
+                      <script>console.log("product jason",{{ obj.product.value | json }})</script>
+                    {% endunless %}
+                  </div>
+                {% endfor %}
+              
+              <div id="total-price-bundle" class="bundle-total"><div>Total:</div><div> <span class="original-total original">{{total_price | money}}</span> <span class="discounted-total">{{ discounted_total | money }}</span></div></div>
+              <div class="total-container">
+                    <button type="submit"
+                      name="add"
+                      id="AddBundleToCart-{{ section.id }}"
+                      class="btn btn--full btn-theme product-form__cart-submit {% if section.settings.enable_payment_button %}product-form__cart-submit--outline{% endif %}"
+                      {% unless current_variant.available %}disabled="disabled"{% endunless %}>
+                      <span id="AddToCartText-{{ section.id }}">
+                        {% unless current_variant.available %}
+                        {{ 'products.product.sold_out' | t }}
+                        {% else %}
+                        {{ 'products.product.add_to_cart' | t }}
+                        {% endunless %}
+                      </span>
+                  </button>
+              </div>
+            </form>
+            </div>
+          {% endif %}
             <div class="d-flex align-items-start flex-column">
               {% comment %} <div> {% endcomment %}
                 {% if settings.enable_compare %}
@@ -382,8 +722,10 @@
                 </span>
                 {% endif %}
                 {% if settings.enable_wishlsit %}
-                <span data-tooltip="true" class="js-btn-wishlist mr-4" title="{{ 'products.product.wishlist_text' | t }}" data-handle="{{product.handle}}">
-                  {%- include 'icon-heart' -%}
+                <span data-tooltip="true" class="js-btn-wishlist mr-4 whishlist-container" title="{{ 'products.product.wishlist_text' | t }}" data-handle="{{product.handle}}">
+                  <div class="wish-icon">
+                    {%- include 'icon-heart' -%}
+                  </div>
                   <div class="wishlist-text">{{ 'products.product.wishlist_text' | t }}</div>
                 </span>
                 {% endif %}
@@ -465,7 +807,9 @@
         {% elsif block.type == 'service' %}
           {%- include 'service-pro' -%}
         {% elsif block.type == 'image-with-text' %}
-          {%- include 'image-with-text' -%}
+          <div class="non-mobile">
+            {%- include 'image-with-text' -%}
+          </div>
         {% endif %}
       {% endfor %}
     </div>
@@ -474,8 +818,8 @@
   {%- include 'next-prev-product' -%}
   {%- include 'photoswipe' -%}
   {%- include 'sticky-cart' -%}
+  <!-- Start of Judge.me code --><div style='clear:both'></div><div id='judgeme_product_reviews' class='jdgm-widget jdgm-review-widget' data-product-title='{{ product.title | escape }}' data-id='{{ product.id }}' data-auto-install='false'>{{ product.metafields.judgeme.widget }}</div><!-- End of Judge.me code -->
 </div>
-
 {% schema %}
 {
 "name": "Product template 1",
