--- a/sections/product-template-1.liquid
+++ b/sections/product-template-1.liquid
@@ -4,7 +4,7 @@
     display:none !important;
   }
   #productrelated {
-    margin-top: 70px
+    {% comment %} margin-top: 70px {% endcomment %}
   }
   .product-modal__image {
     display: block;
@@ -145,7 +145,6 @@
   font-size: 1rem;
   font-weight: 400;
   color: #555; /* Medium gray for a softer look */
-  list-style: none;
   padding: 0;
   margin: 0 auto;
   max-width: 600px;
@@ -156,9 +155,16 @@
 }
 
 .selling-points li {
+  list-style: none;
   position: relative;
   padding-left: 20px;
 }
+
+.selling-points Ul {
+  padding-left: 0px;
+  margin-left: 0px;
+}
+
 
 /* Minimal Circle Icon for Each Item */
 .selling-points li::before {
@@ -166,7 +172,7 @@
   position: absolute;
   left: 0;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(-0%);
   width: 6px;
   height: 6px;
   background-color: #888; /* Soft gray dot for a subtle effect */
@@ -211,7 +217,6 @@
 }
 
 .bundle-container, .info-container{
-  min-width: 440px; 
   max-width: 600px;
   background: white;
   padding: 10px;
@@ -448,6 +453,22 @@
     display: flex; 
     flex-direction: row;
   }
+  .non-mobile {
+    width: 100%;
+  }
+  .image-text-product {
+    
+  }
+  .bundle-name-price {
+    display:flex; 
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .price {
+    display:flex; 
+    flex-direction: column;
+    padding-right: 5px;
+  }
 </style>
 {% assign product_image_size = '480x480' %}
 <div class="container js-recently-view" itemscope itemtype="http://schema.org/Product" id="ProductSection-{{ section.id }}" data-section-id="{{ section.id }}" data-section-type="product" data-enable-history-state="true" data-ajax="true" data-stock="{{ section.settings.stock_enable }}" data-handle="{{product.handle}}">
@@ -508,10 +529,13 @@
               </span>
             </li>
             {% if product.compare_at_price_max > product.price %}
+              <script>console.log({{ product | json }});</script>
             <li>
               <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span>
               <s id="ComparePrice-{{ section.id }}" class="product-single__price product-single__price--compare">
+                {% if current_variant.compare_at_price > current_variant.price %}
                 {{ current_variant.compare_at_price | money }}
+                {% endif %}
               </s>
             </li>
             <li>
@@ -531,9 +555,9 @@
             {{ section.settings.key_points_title }}
           </div>
           
-          <ul class="selling-points">
+          <div class="selling-points">
             {{ section.settings.key_points }}
-          </ul>
+          </div>
         {% endif %}
          
          
@@ -619,36 +643,26 @@
           </div>
           {% endif %}
         {% endform %}
-          <div class="gr-btnjs py-4 mt-4 border-top">
-            <div class="mobile-only pb-4">
-              {% for block in section.blocks %}
-                {% if block.type == 'image-with-text' %}
-                  {%- include 'image-with-text' -%}
-                {% endif %}
-              {% endfor %}
-            </div>
             {% assign bundle_options_count = product.metafields.custom.bundle_options.value.count %}
             {% if bundle_options_count > 0 %}
-            <div class="bundle-sec-title">Bundle-Up & Save More!</div> 
-            <div>Complete your AirLess.</div>
-            <div class="bundle-container" data-bundle-options-count="{{ bundle_options_count }}">
+            <div class="bundle-container my-4 pb-3" data-bundle-options-count="{{ bundle_options_count }}">
+              <div class="bundle-sec-title">{{product.metafields.custom.bundle_title}}</div> 
+              <div>{{product.metafields.custom.bundle_description}}</div>
               
               <div class="bundle-item selected">
                 <div class="bundle-check">
                   {% render 'icon-check-circle' %}
                 </div>
-                {{ product | image_url: width: 75 | image_tag: id: "bundled_product", class: "bundle-image"}}
+                {{ current_variant | image_url: width: 75 | image_tag: id: "bundled_product", class: "bundle-image"}}
                 <div class="item-details">
                     <h5>{{ product.title }}</h5>
                     <p class="price">
-                      {%- unless product.compare_at_price_max > product.price -%}
+                      {%- unless current_variant.compare_at_price_max > current_variant.price -%}
                         <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span>
                       {%- endunless -%}
-                      <span id="ProductPrice-{{ section.id }}" class="discounted" itemprop="price" content="{{ current_variant.price | divided_by: 100.00 }}">
+                      <span id="BunProductPrice-{{ section.id }}" class="discounted" itemprop="price" content="{{ current_variant.price | divided_by: 100.00 }}">
                         {{ current_variant.price | money }}
                       </span>
-                      {% comment %} <span class="discounted">$205.51</span> 
-                      <span class="original" id="BunProductPrice-{{ section.id }}">{{ current_variant.price | money }}</span> {% endcomment %}
                     </p>
                 </div>
               </div>
@@ -665,54 +679,67 @@
                     </div> 
                     {{ curr_var | image_url: width: 75 | image_tag: class: "bundle-image" }}
                     <div class="item-details">
-                      <h5>{{ obj.product.value.title }}</h5>
-                      {% assign total_price = total_price | plus: curr_var.price %}
-                      {% assign discount_factor = 100 | minus: obj.discount_2 | divided_by: 100.0 %}
-                      {% assign discount_price = curr_var.price | times: discount_factor %}
-                      {% assign discounted_total = discounted_total | plus: discount_price %}
-                      <p class="price" data-price="{{ curr_var.price}}" data-val1="{{obj.discount_1}}" data-val2="{{obj.discount_2}}"><span class="discounted">{{ curr_var.price | times: discount_factor | money }}</span> <span id="original" class="original">{{ curr_var.price | money }}</span></p>
+                      <div class="bundle-name-price">
+                        <h5>{{ obj.product.value.title }}</h5>
+                        {% assign total_price = total_price | plus: curr_var.price %}
+                        {% assign discount_price = 100.00 | minus: obj.discount_2 | divided_by: 100.0 | times: curr_var.price | ceil %}
+                        {% assign discounted_total = discounted_total | plus: discount_price %}
+                        <p class="price" data-price="{{ curr_var.price}}" data-val1="{{obj.discount_1}}" data-val2="{{obj.discount_2}}"><span class="discounted">{{ discount_price | money }}</span> <span id="original" class="original">{{ curr_var.price | money }}</span></p>
+                      </div>
+                      <select name="id">
+                        {% for variant in obj.product.value.variants %}
+                        <option {% if variant == current_variant %} selected="selected" {% endif %} data-bundle-product="{{ obj.product.value.id }}" data-sku="{{ variant.sku }}" value="{{ variant.id }}" {% unless variant.available %} disabled="disabled" {% endunless %}>
+                          {% if variant.available %}
+                          {{ variant.title }} 
+                          {% else %}
+                          {{ variant.title }} - {{ 'products.product.sold_out' | t }}
+                          {% endif %}
+                        </option>
+                        {% endfor %}
+                      </select>
+                      <input type="hidden" id="Quantity" name="quantity" value="1">
                     </div>
-                    <select name="id">
-                      {% for variant in obj.product.value.variants %}
-                      <option {% if variant == current_variant %} selected="selected" {% endif %} data-bundle-product="{{ obj.product.value.id }}" data-sku="{{ variant.sku }}" value="{{ variant.id }}" {% unless variant.available %} disabled="disabled" {% endunless %}>
-                        {% if variant.available %}
-                        {{ variant.title }} 
-                        {% else %}
-                        {{ variant.title }} - {{ 'products.product.sold_out' | t }}
-                        {% endif %}
-                      </option>
-                      {% endfor %}
-                    </select>
-                    <input type="hidden" id="Quantity" name="quantity" value="1">
                     {% unless product == empty %}
                       <script type="application/json" id="BundleProductJson-{{ obj.product.value.id }}">
                           {{ obj.product.value | json }}
                       </script>
-                      <script>console.log("product jason",{{ obj.product.value | json }})</script>
                     {% endunless %}
                   </div>
                 {% endfor %}
-              
-              <div id="total-price-bundle" class="bundle-total"><div>Total:</div><div> <span class="original-total original">{{total_price | money}}</span> <span class="discounted-total">{{ discounted_total | money }}</span></div></div>
-              <div class="total-container">
-                    <button type="submit"
-                      name="add"
-                      id="AddBundleToCart-{{ section.id }}"
-                      class="btn btn--full btn-theme product-form__cart-submit {% if section.settings.enable_payment_button %}product-form__cart-submit--outline{% endif %}"
-                      {% unless current_variant.available %}disabled="disabled"{% endunless %}>
-                      <span id="AddToCartText-{{ section.id }}">
-                        {% unless current_variant.available %}
-                        {{ 'products.product.sold_out' | t }}
-                        {% else %}
-                        {{ 'products.product.add_to_cart' | t }}
-                        {% endunless %}
-                      </span>
-                  </button>
-              </div>
-            </form>
+                <div class="gr-btnjs pt-4 my-4 border-top">
+                  {% include 'free-shipping' %}
+                  
+                </div>
+                <div id="total-price-bundle" class="bundle-total"><div>Total Bundle:</div><div> <span class="original-total original">{{total_price | money}}</span> <span class="discounted-total">{{ discounted_total | money }}</span></div></div>
+                <div class="total-container">
+                      <button type="submit"
+                        name="add"
+                        id="AddBundleToCart-{{ section.id }}"
+                        class="btn btn--full btn-theme product-form__cart-submit {% if section.settings.enable_payment_button %}product-form__cart-submit--outline{% endif %}"
+                        {% unless current_variant.available %}disabled="disabled"{% endunless %}>
+                        <span id="AddToCartText-{{ section.id }}">
+                          {% unless current_variant.available %}
+                          {{ 'products.product.sold_out' | t }}
+                          {% else %}
+                          {{ 'products.product.add_to_cart' | t }}
+                          {% endunless %}
+                        </span>
+                    </button>
+                </div>
+              </form>
             </div>
-          {% endif %}
-            <div class="d-flex align-items-start flex-column">
+            {% endif %}
+            
+            <div class="mobile-only">
+              {% for block in section.blocks %}
+                {% if block.type == 'image-with-text' %}
+                  {%- include 'image-with-text' -%}
+                {% endif %}
+              {% endfor %}
+            </div>
+
+            <div class="gr-btnjs">
+            <div class="d-flex align-items-start flex-column border-top">
               {% comment %} <div> {% endcomment %}
                 {% if settings.enable_compare %}
                 <span class="btn js-btn-compare mr-4" data-tooltip="true" title="{{ 'products.product.compare_text' | t }}" data-handle="{{product.handle}}">
@@ -773,7 +800,6 @@
           {% endif %}
         </div>
         {% include 'fake-viewer' %}
-        {% include 'free-shipping' %}
         {% include 'shipping-time' %}
         {% if settings.enable_countdown_page %}
         {% include 'product-countdown' %}
@@ -965,9 +991,9 @@
   "default": "Never worry about expensinve baggage fees again!"
 },
 {
-  "type": "html",
+  "type": "richtext",
   "id": "key_points",
-  "label": "Selling Points in HTML <li></li>",
+  "label": "Selling Points RichText",
 },
 {
 "type": "select",
@@ -1421,7 +1447,7 @@
             "default": "Image with text"
           },
           {
-            "type": "textarea",
+            "type": "richtext",
             "id": "text",
             "label": "HTML / Description",
             "default": "<p>Pair large text with an image to give focus to your chosen product, collection, or blog post. Add details on availability, style, or even provide a review.</p>"
