--- a/snippets/cart-items.liquid
+++ b/snippets/cart-items.liquid
@@ -122,7 +122,7 @@
                           {{ item.product.title }}
                         </a>
                         <span class="cart__item-total-mobile">
-                          {{ item.line_price | money }}
+                          {{ item.final_line_price | money }}
                         </span>
                         <div class="item-details">
                           {% for option in item.options_with_values %}
@@ -169,14 +169,14 @@
                   <td class="td-subtotal">
                     <div class="">
                       <span class="cart__item-total">
-                        {{ item.line_price | money }}
+                        {{ item.final_line_price | money }}
                       </span><br>
-                      {% if item.original_line_price != item.line_price %}
+                      {% if item.original_line_price != item.final_line_price %}
                         <small class="cart-item__original-price cart__item-total"><s>{{ item.original_line_price | money }}</s></small>
+                        {% for discount in item.discounts %}
+                          <p class="cart-item__discount cart__item-total">{{ discount.title }}</p>
+                        {% endfor %}
                       {% endif %}
-                      {% for discount in item.discounts %}
-                        <p class="cart-item__discount cart__item-total">{{ discount.title }}</p>
-                      {% endfor %}
                     </div>
                   </td>
                   <td class="td-remove">
