--- a/snippets/cross-sell.liquid
+++ b/snippets/cross-sell.liquid
@@ -1,4 +1,46 @@
 <!-- cross-sell.liquid -->
+{%- style -%}
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  max-width: 100%;
+}
+
+.mySlides {
+  display: none;
+  text-align: center;
+}
+
+.prev, .next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  color: white;
+  font-size: 24px;
+  padding: 10px;
+  cursor: pointer;
+  user-select: none;
+  transition: 0.3s;
+}
+
+.prev:hover, .next:hover {
+  background-color: rgba(156, 156, 156, 0.69);
+}
+
+.prev {
+  left: 10px; /* Position on the left */
+}
+
+.next {
+  right: 10px; /* Position on the right */
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
+{%- endstyle -%}
 <div class="modal fade" id="jsCrosssell" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-dialog--crosssell modal-dialog-centered" role="document">
     <div class="modal-content">
